Fixing minor spacing bug on mobile

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -161,7 +161,6 @@
 
   .main {
     width: 100%;
-    padding-left: 0;
   }
 
   .card_container {
